--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -4,6 +4,7 @@
       Username
     </h2>
     <div id="settings-option-list">
+      <label for="username-input">Current Username: </label>
       <input
         class="settings-text-input"
         id="username-input"
@@ -32,7 +33,7 @@
         <button
           class="color-palette-button"
           value="greyscale"
-          id="color-palette-button-original"
+          id="color-palette-button-greyscale"
         >
           Greyscale
         </button>
@@ -41,7 +42,7 @@
         <button
           class="color-palette-button"
           value="dark"
-          id="color-palette-button-original"
+          id="color-palette-button-dark"
         >
           Dark
         </button>
